--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
-    "bootstrap": "^4.1.1",
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "bootstrap": "^4.1.1",
+    "d3": "^5.15.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
@@ -32,9 +33,10 @@
     "@angular/cli": "~8.3.14",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
-    "@types/node": "~8.9.4",
+    "@types/d3": "^5.7.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
