Cangd version number and added host script

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "stocks-and-shares-spa",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "host": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
